--- a/busmap/index.html
+++ b/busmap/index.html
@@ -12,7 +12,11 @@
 <div class="fixedparts" id="svgbox">
 	<div id="svgmover"></div>
 </div>
-<div class="fixedparts" id="infobox"></div>
+<div class="fixedparts" id="infobox">
+	<div class="button" id="newbutton"></div>
+    <div class="button" id="loadbutton"></div>
+    <div class="button" id="savebutton"></div>
+</div>
 <div class="fixedparts" id="toolbox"></div>
 </body>
 </html>
