--- a/busmap/index.html
+++ b/busmap/index.html
@@ -3,20 +3,25 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
+<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script type="text/javascript" src="jquery-2.1.0.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
-<div class="fixedparts" id="svgbox">
-	<div id="svgmover"></div>
+<div id="mainbox">
+    <div class="fixedparts" id="svgbox">
+        <div id="svgmover"></div>
+    </div>
+    <div class="fixedparts" id="infobox">
+        <div class="button" id="newbutton">New</div>
+        <div class="button" id="loadbutton">Open</div>
+        <div class="button" id="savebutton">Save</div>
+    </div>
+    <div class="fixedparts" id="toolbox"></div>
 </div>
-<div class="fixedparts" id="infobox">
-	<div class="button" id="newbutton"></div>
-    <div class="button" id="loadbutton"></div>
-    <div class="button" id="savebutton"></div>
+<div id="newbox">
 </div>
-<div class="fixedparts" id="toolbox"></div>
 </body>
 </html>
