--- a/busmap/index.html
+++ b/busmap/index.html
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-<div id="mainbox">
-    <div class="fixedparts" id="svgbox">
-        <div id="svgmover"></div>
-    </div>
-    <div class="fixedparts" id="infobox">
-        <div class="button" id="newbutton">New</div>
-        <div class="button" id="loadbutton">Open</div>
-        <div class="button" id="savebutton">Save</div>
-    </div>
-    <div class="fixedparts" id="toolbox"></div>
+<div class="fixedparts" id="svgbox">
+    <div id="svgmover"></div>
 </div>
+<div class="fixedparts" id="infobox">
+    <div class="button" id="newbutton">New</div>
+    <div class="button" id="loadbutton">Open</div>
+    <div class="button" id="savebutton">Save</div>
+</div>
+<div class="fixedparts" id="toolbox"></div>
+<div id="faderbox"></div>
 <div id="newbox">
+	Map size: <input type="text" id="mapwidth" value="2970" /> &times; <input type="text" id="mapheight" value="2100" /> <span class="notefont">(width &times; height)</span>
 </div>
 </body>
 </html>
