--- a/busmap/index.html
+++ b/busmap/index.html
@@ -21,7 +21,11 @@
 <div class="fixedparts" id="toolbox"></div>
 <div id="faderbox"></div>
 <div id="newbox">
-	Map size: <input type="text" id="mapwidth" value="2970" /> &times; <input type="text" id="mapheight" value="2100" /> <span class="notefont">(width &times; height)</span>
+	<div>Map size: <input type="text" id="mapwidth" /> &times; <input type="text" id="mapheight" /> <span class="notefont">(width &times; height)</span></div>
+    <div>Angle step: 90&deg; &divide; <input type="text" id="anglestep" /> = <span></span>&deg;</div>
+    <div class="buttoncontainer">
+    	<div class="button" id="createbutton">Create</div><div class="button" id="cancelbutton">Cancel</div>
+    </div>
 </div>
 </body>
 </html>
