jquerysvg and more

--- a/busmap/index.html
+++ b/busmap/index.html
@@ -5,7 +5,9 @@
 <title>Untitled Document</title>
 <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="style.css" />
+<style type="text/css">@import "jquery.svg.css";</style> 
 <script type="text/javascript" src="jquery-2.1.0.min.js"></script>
+<script type="text/javascript" src="jquery.svg.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
 </head>
 
