--- a/busmap/index.html
+++ b/busmap/index.html
@@ -16,9 +16,9 @@
     <div id="svgmover"></div>
 </div>
 <div class="fixedparts" id="infobox">
-    <div class="button" id="newbutton">New</div>
-    <div class="button" id="loadbutton">Open</div>
-    <div class="button" id="savebutton">Save</div>
+    <div class="button" id="newbutton"><img class="buttonicon" src="icons/new.png" /> <span class="buttontext">New</span></div>
+    <div class="button" id="loadbutton"><img class="buttonicon" src="icons/open.png" /> <span class="buttontext">Open</span></div>
+    <div class="button" id="savebutton"><img class="buttonicon" src="icons/save.png" /> <span class="buttontext">Save</span></div>
 </div>
 <div class="fixedparts" id="toolbox"></div>
 <div id="faderbox"></div>
@@ -26,7 +26,7 @@
 	<div>Map size: <input type="text" id="mapwidth" /> &times; <input type="text" id="mapheight" /> <span class="notefont">(width &times; height)</span></div>
     <div>Angle step: 90&deg; &divide; <input type="text" id="anglestep" /> = <span></span>&deg;</div>
     <div class="buttoncontainer">
-    	<div class="button" id="createbutton">Create</div><div class="button" id="cancelbutton">Cancel</div>
+    	<div class="button" id="createbutton"><img class="buttonicon" src="icons/tick.png" /> <span class="buttontext">Create</span></div><div class="button" id="cancelbutton"><img class="buttonicon" src="icons/cross.png" /> <span class="buttontext">Cancel</span></div>
     </div>
 </div>
 </body>
