--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<script type="text/javascript">
+window.location.href="http://www2.hci.edu.sg/s9609261z/mingen/mingen.html";
+</script>
