--- a/ship/ship.html
+++ b/ship/ship.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="ship.css">
     <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="mainpage.js"></script>
 </head>
 <body>
