--- a/ship/ship.html
+++ b/ship/ship.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
 <head>
@@ -10,6 +11,7 @@
     <div id="titlescreen">
         <div id="titlebuttonflex">
             <div id="titlebuttonbox" class="buttonbox">
+                <div class="titlebutton" id="nametitle">Port Control</div>
                 <div class="titlebutton" id="playtitlebutton">Play!</div>
                 <div class="titlebutton" id="instructiontitlebutton">Instructions</div>
             </div>
