--- a/ship/ship.html
+++ b/ship/ship.html
@@ -9,14 +9,19 @@
 </head>
 <body>
     <div id="titlescreen">
-        <div id="titlebuttonflex">
+        <div id="titlebuttonflex" class="buttonflex">
             <div id="titlebuttonbox" class="buttonbox">
                 <div class="titlebutton" id="nametitle">Port Control</div>
                 <div class="titlebutton" id="playtitlebutton">Play!</div>
                 <div class="titlebutton" id="instructiontitlebutton">Instructions</div>
             </div>
+        </div>
+        <div id="settingbuttonflex" class="buttonflex displaynone">
             <div id="settingbuttonbox" class="buttonbox">
-                <div class="titlebutton">Play</div>
+                <div class="horizontalholderflex">
+                	<div class="titlebutton settingbutton settingbuttonoff settingbuttondisabled" id="fullscreensettingbutton">Fullscreen</div>
+                    <div class="titlebutton settingbutton settingbuttonoff" id="pointerlocksettingbutton">Lock mouse</div>
+                </div>
                 <div class="titlebutton">Instructions</div>
             </div>
         </div>
