ai interfarce, nimmt screen, and control iframe

--- a/nimmt/nimmt.html
+++ b/nimmt/nimmt.html
@@ -14,14 +14,20 @@
 <body>
     <div id="maincontent">
     	<div id="screen">
-        	<div id="screencontent">
+            <div class="hidden innerflex" id="lobby">
+            	<table>
+                	<th><td>ID</td><td>Name</td></th>
+                    <tr></tr>
+                </table>
+            </div>
+            <div class="hidden innerflex" id="screencontent">
                 <div id="playarea">
                 	<div class="cardcolumn">&nbsp;</div>
                     <div class="cardcolumn">&nbsp;</div>
                     <div class="cardcolumn">&nbsp;</div>
                     <div class="cardcolumn">&nbsp;</div>
                 </div>
-                <div id="playerhand">b</div>
+                <div id="playerhand">&nbsp;</div>
             </div>
         </div>
         <div id="control">
