controller, and additions to game manager

--- a/nimmt/control.html
+++ b/nimmt/control.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="ai.js"></script>
+  	<link rel="stylesheet" type="text/css" href="control.css">
+    <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="card.js"></script>
+	<script type="text/javascript" src="control.js"></script>
   </head>
+  <body>
+  	<!--<div>Cards go here</div>-->
+    <div class="card" id="c1"><div>
+    <svg class="face-1" viewBox="0 0 50 70">
+		<rect x="0" y="0" width="50" height="70" class="face-background" />
+		<text class="face-value" text-anchor="middle" x="25" y="50">10</text>
+		<text class="face-points" text-anchor="middle" x="25" y="9">&#10102;</text>
+		<text class="face-points" text-anchor="middle" x="25" y="68">&#10102;</text>
+    </svg>
+    </div></div>
+  </body>
 </html>
+<!-- style="width:100px;height:140px;border:2px solid #00F;border-radius:12px;" -->
