--- a/nimmt/control.html
+++ b/nimmt/control.html
@@ -9,14 +9,15 @@
   </head>
   <body>
   	<!--<div>Cards go here</div>-->
-    <div class="card" id="c1"><div>
+    <!--<div class="card" id="c1"><div>
     <svg class="face-1" viewBox="0 0 50 70">
 		<rect x="0" y="0" width="50" height="70" class="face-background" />
 		<text class="face-value" text-anchor="middle" x="25" y="50">10</text>
 		<text class="face-points" text-anchor="middle" x="25" y="9">&#10102;</text>
 		<text class="face-points" text-anchor="middle" x="25" y="68">&#10102;</text>
     </svg>
-    </div></div>
+    </div></div>-->
+    <div id=\"start\">Click to start game</div>
   </body>
 </html>
 <!-- style="width:100px;height:140px;border:2px solid #00F;border-radius:12px;" -->
