--- a/nimmt/control.html
+++ b/nimmt/control.html
@@ -17,7 +17,7 @@
 		<text class="face-points" text-anchor="middle" x="25" y="68">&#10102;</text>
     </svg>
     </div></div>-->
-    <div id=\"start\">Click to start game</div>
+    <div id="start">Click to start game</div>
   </body>
 </html>
 <!-- style="width:100px;height:140px;border:2px solid #00F;border-radius:12px;" -->
