add script card.js

--- a/nimmt/nimmt.html
+++ b/nimmt/nimmt.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="nimmt-screen.js"></script>
     <script type="text/javascript" src="local-manager.js"></script>
     <script type="text/javascript" src="international-manager.js"></script>
+    <script type="text/javascript" src="card.js"></script>
 </head>
 <body>
     <div id="maincontent">
