--- a/symbol/symbol.html
+++ b/symbol/symbol.html
@@ -7,6 +7,8 @@
 body{
 	background-color:#FFC;
 	font-family:'Calibri','Arial Unicode MS',Arial,Helvetica,sans-serif;
+	-ms-touch-action:none;
+	touch-action:none;
 }
 table{
 	width:100%;
