--- a/sudoku/sudoku.html
+++ b/sudoku/sudoku.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="sudoku.css" />
 <script type="text/javascript" src="jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="sudoku.js"></script>
+<script type="text/javascript" src="google-analytics.js"></script>
 </head>
 
 <body>
