--- a/snake/snake.html
+++ b/snake/snake.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
 <head>
-	<link rel="stylesheet" type="text/css" href="nimmt.css">
+	<link rel="stylesheet" type="text/css" href="snake.css">
     <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
@@ -12,7 +12,10 @@
     <script type="text/javascript" src="snake-manager.js"></script>
 </head>
 <body>
-    <svg id="mainsvg" width="1200" height="800" xmlns="http://www.w3.org/2000/svg" version="1.1">
+    <div id="maindiv">
+    	sdfsdf
+    </div>
+	<svg id="mainsvg" width="1200" height="800" xmlns="http://www.w3.org/2000/svg" version="1.1">
 		<defs>
 			<pattern id="originalboard" width="1" height="1" patternContentUnits="objectBoundingBox">
 			   <line />
