--- a/snake/snake.html
+++ b/snake/snake.html
@@ -13,7 +13,12 @@
 </head>
 <body>
     <div id="maindiv">
-    	sdfsdf
+    	<div id="tablediv">
+        	<div id="sidebar">
+            </div>
+            <div id="mainbar">
+            </div>
+        </div>
     </div>
 	<svg id="mainsvg" width="1200" height="800" xmlns="http://www.w3.org/2000/svg" version="1.1">
 		<defs>
