input system with queueing

--- a/snake/snake.html
+++ b/snake/snake.html
@@ -14,9 +14,14 @@
 <body>
     <div id="maindiv">
     	<div id="tablediv">
-        	<div id="sidebar">
+        	<div id="mainbar">
+            Mainbar
             </div>
-            <div id="mainbar">
+            <div id="sidebar">
+            	<div id="sidewrapper">
+                	<div id="sidegroundedbox">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
