--- a/snake/snake.html
+++ b/snake/snake.html
@@ -15,7 +15,11 @@
     <div id="maindiv">
     	<div id="tablediv">
         	<div id="mainbar">
-            Mainbar
+            	<div id="mainwrapper">
+                	<div id="svgbox">
+                    	<svg id="mainsvg" width="100%" height="100%" viewBox="-0.5 -0.5 1 1" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" version="1.1"></svg>
+                    </div>
+                </div>
             </div>
             <div id="sidebar">
             	<div id="sidewrapper">
@@ -25,18 +29,5 @@
             </div>
         </div>
     </div>
-	<svg id="mainsvg" width="1200" height="800" xmlns="http://www.w3.org/2000/svg" version="1.1">
-		<defs>
-			<pattern id="originalboard" width="1" height="1" patternContentUnits="objectBoundingBox">
-			   <line />
-			   
-			   
-			   <rect x="0" y="0" width=".25" height=".25" fill="skyblue"/>
-			   <rect x="0" y="0" width=".125" height=".125" fill="url(#Gradient2)"/>
-			   <circle cx=".125" cy=".125" r=".1" fill="url(#Gradient1)" fill-opacity="0.5"/>
-			 </pattern>
-		</defs>
-		<rect fill="url(#originalboard)" x="0" y="0" width="200" height="200"/>
-	</svg>
 </body>
 </html>
