--- a/symbol/symbol.html
+++ b/symbol/symbol.html
@@ -2,9 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" manifest="symbol.appcache">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-<link href='Quivira.otf' rel='stylesheet' type='text/css'>
+<link href='quivira.otf' rel='stylesheet' type='text/css'>
 <head>
 <style>
+@font-face{
+	font-family:Quivira;
+	src:url("quivira.otf")format("opentype")
+}
 body{
 	background-color:#FFC;
 	font-family:Quivira,Calibri,'Arial Unicode MS',Arial,Helvetica,sans-serif;
