Added additional div to allow offsetHeight and offsetWidth to work in Firefox
- added extra <div> wrapper for the svg to allow offsetHeight and
offsetWidth to work in Firefox (Firefox is still unable to display
circles with r<0.005

--- a/busmap/index.html
+++ b/busmap/index.html
@@ -9,11 +9,14 @@
         <script type="text/javascript" src="public/js/normalizer.js"></script>
         <script type="text/javascript" src="public/js/mergestops.js"></script>
         <script type="text/javascript" src="public/js/routegraphgenerator.js"></script>
+        <script type="text/javascript" src="public/js/junctions.js"></script>
         <script type="text/javascript" src="public/js/displayer.js"></script>
         <script type="text/javascript" src="public/js/busmap.js"></script>
         <title>Untitled</title>
     </head>
     <body>
-        <svg id="busmap" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1 1" preserveAspectRatio="xMidYMid meet"></svg>
+        <div id="busmap-wrapper">
+            <svg id="busmap" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1 1" preserveAspectRatio="xMidYMid meet"></svg>
+        </div>
     </body>
 </html>
