--- a/io/blog.html
+++ b/io/blog.html
@@ -23,7 +23,7 @@
                 <div class="content">
                     Blah
                 </div>
-                <div class="fb-comments" data-href="http://btzy.github.io/io/blog.html" data-width="100%" data-numposts="5"></div>
+                <div class="fb-comments" data-href="http://btzy.github.io/io/blog.html" data-width="100%" data-numposts="5" data-colorscheme="dark"></div>
             </div>
         </div>
     </div>
