--- a/io/index.html
+++ b/io/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>Dom Client</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <script type="text/javascript" src="FontLoader.js"></script>
     <script type="text/javascript" src="key-polyfill.js"></script>
     <script type="text/javascript" src="encoding-polyfill.js"></script>
     <script type="text/javascript" src="objects.js"></script>
@@ -16,6 +17,11 @@
 <body>
     <div class="full-screen-panel" id="welcome-panel">
         <div id="welcome-flex">
+            <div id="flex-item-title">
+                <div id="canvas-clipper">
+                    <canvas id="title-canvas"></canvas>
+                </div>
+            </div>
             <div id="flex-item-name">
                 <input type="text" id="name-textbox" placeholder="Enter your name" />
             </div>
