small screen fixes

--- a/io/index.html
+++ b/io/index.html
@@ -17,6 +17,7 @@
 <body>
     <div class="full-screen-panel" id="welcome-panel">
         <div id="welcome-flex">
+            <div id="flex-item-expand"></div>
             <div id="flex-item-title">
                 <div id="canvas-clipper">
                     <canvas id="title-canvas"></canvas>
@@ -25,6 +26,7 @@
             <div id="flex-item-name">
                 <input type="text" id="name-textbox" placeholder="Enter your name" />
             </div>
+            <div id="flex-item-expand"></div>
         </div>
     </div>
     <div class="full-screen-panel" id="game-panel">
