--- a/io/index.html
+++ b/io/index.html
@@ -26,6 +26,7 @@
             <div id="flex-item-name">
                 <input type="text" id="name-textbox" placeholder="Enter your name" />
             </div>
+            <div style="width:340px;height:290px;flex:0 0 auto;"></div>
             <!--<div class="flex-item-expand"></div>-->
         </div>
     </div>
