--- a/io/index.html
+++ b/io/index.html
@@ -26,6 +26,9 @@
             <div id="flex-item-name">
                 <input type="text" id="name-textbox" placeholder="Enter your name" />
             </div>
+            <div id="flex-item-inputmode">
+                <div><span>Interaction mode:</span> <span id="interactionmode"><span class="visible">Mouse + Keyboard</span><span>Touch (buttons on left)</span><span>Touch (buttons on right)</span> (tap to change)</span></div>
+            </div>
             <div style="width:340px;height:290px;flex:0 1 auto;"></div>
             <!--<div class="flex-item-expand"></div>-->
         </div>
