--- a/io/index.html
+++ b/io/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>Dom Client</title>
+    <title>celestia.io</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <script type="text/javascript" src="FontLoader.js"></script>
     <script type="text/javascript" src="key-polyfill.js"></script>
