--- a/io/index.html
+++ b/io/index.html
@@ -27,7 +27,7 @@
                 <input type="text" id="name-textbox" placeholder="Enter your name" />
             </div>
             <div id="flex-item-inputmode">
-                <div><span>Interaction mode:</span> <span id="interactionmode"><span class="visible">Mouse + Keyboard</span><span>Touch (buttons on left)</span><span>Touch (buttons on right)</span> (tap to change)</span></div>
+                <div><span id="interactionmode"><span>Interaction mode:</span> <span class="interactionoption visible" id="mousedefault">Mouse + Keyboard</span><span class="interactionoption" id="touchdefault">Touch (buttons on left)</span><span class="interactionoption">Touch (buttons on right)</span> <span style="color:gray;">(click to change)</span></span></div>
             </div>
             <div style="width:340px;height:290px;flex:0 1 auto;"></div>
             <!--<div class="flex-item-expand"></div>-->
