--- a/io/index.html
+++ b/io/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="FontLoader.js"></script>
     <script type="text/javascript" src="key-polyfill.js"></script>
     <script type="text/javascript" src="encoding-polyfill.js"></script>
+    <script type="text/javascript" src="findindex-polyfill.js"></script>
     <script type="text/javascript" src="objects.js"></script>
     <script type="text/javascript" src="interpolator.js"></script>
     <script type="text/javascript" src="changelimited.js"></script>
