--- a/io/index.html
+++ b/io/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div id="flex-item-name">
-                <input type="text" id="name-textbox" placeholder="Enter your name" />
+                <input type="text" id="name-textbox" placeholder="Type your name and press Enter" />
             </div>
             <div id="flex-item-inputmode">
                 <div><span id="interactionmode"><span>Interaction mode:</span> <span class="interactionoption visible" id="mousedefault">Mouse + Keyboard</span><span class="interactionoption" id="touchdefault">Touch (buttons on left)</span><span class="interactionoption">Touch (buttons on right)</span> <span style="color:gray;">(click to change)</span></span></div>
