--- a/io/index.html
+++ b/io/index.html
@@ -25,10 +25,10 @@
                 </div>
             </div>
             <div id="flex-item-name">
-                <input type="text" id="name-textbox" placeholder="Type your name and press Enter" />
+                <input type="text" id="name-textbox" placeholder="Enter your name" />
             </div>
             <div id="flex-item-inputmode">
-                <div><span id="interactionmode"><span>Interaction mode:</span> <span class="interactionoption visible" id="mousedefault">Mouse + Keyboard</span><span class="interactionoption" id="touchdefault">Touch (buttons on left)</span><span class="interactionoption">Touch (buttons on right)</span> <span style="color:gray;">(click to change)</span></span></div>
+                <div><span id="interactionmode"><span>Interaction mode:</span> <span class="interactionoption visible" id="mousedefault">Mouse + Keyboard</span><span class="interactionoption touch" id="touchdefault">Touch (buttons on left)</span><span class="interactionoption touch opposite">Touch (buttons on right)</span> <span style="color:gray;">(click to change)</span></span></div>
             </div>
             <div style="width:340px;height:290px;flex:0 1 auto;"></div>
             <!--<div class="flex-item-expand"></div>-->
