--- a/symbol/symbol.html
+++ b/symbol/symbol.html
@@ -10,7 +10,7 @@
 }
 body{
 	background-color:#FFC;
-	font-family:Quivira,Calibri,'Arial Unicode MS',Arial,Helvetica,sans-serif;
+	font-family:'Cambria Math',Calibri,'Arial Unicode MS',Arial,Helvetica,sans-serif;
 	-ms-touch-action:none;
 	touch-action:none;
 }
@@ -34,11 +34,14 @@ table td{
 	<tr><td>⁰ ¹ ² ³ ⁴ ⁵ ⁶ ⁷ ⁸ ⁹ ⁺ ⁻ ⁼ ⁽ ⁾ ₀ ₁ ₂ ₃ ₄ ₅ ₆ ₇ ₈ ₉ ₊ ₋ ₌ ₍ ₎</td></tr>
     <tr><td>ᵃ ᵇ ᶜ ᵈ ᵉ ᶠ ᵍ ʰ ⁱ ʲ ᵏ ˡ ᵐ ⁿ ᵒ ᵖ ʳ ˢ ᵗ ᵘ ᵛ ʷ ˣ ʸ ᶻ ₐ ₑ ₕ ᵢ ⱼ ₖ ₗ ₘ ₙ ₒ ₚ ᵣ ₛ ₜ ᵤ ᵥ ₓ</td></tr>
     <tr><td>ᴬ ᴮ ᴰ ᴱ ᴳ ᴴ ᴵ ᴶ ᴷ ᴸ ᴹ ᴺ ᴼ ᴾ ᴿ ᵀ ᵁ ⱽ ᵂ</td></tr>
+    <tr><td>Α Β Γ Δ Ε Ζ Η Θ Ι Κ Λ Μ Ν Ξ Ο Π Ρ Σ Τ Υ Φ Χ Ψ Ω α β γ δ ε ζ η ή θ ι κ λ μ ν ξ ο π ρ σ τ υ φ χ ψ ω</td></tr>
     <tr><td>ᵅ ᵝ ᵞ ᵟ ᵋ ᶿ ᶥ ᶲ ᵠ ᵡ ᵦ ᵧ ᵨ ᵩ ᵪ</td></tr>
     <tr><td>½ ¼ ¾ ⅐ ⅑ ⅒ ⅓ ⅔ ⅕ ⅖ ⅗ ⅘ ⅙ ⅚ ⅛ ⅜ ⅝ ⅞ ⅟ ↉</td></tr>
     <tr><td>+ − ± ∓ × ÷ · ⨯ ∣ ∤ ∴ ∵ ∠ ∡ ∥ ∦ ⊥ ∆ ∇ ∀ ∃ ∄ ∝ ∞ ∂ ∫ ∬ ∭ ∮ ∯ ∰</td></tr>
     <tr><td>∈ ∋ ∉ ∌ ⊂ ⊃ ⊄ ⊅ ⊆ ⊇ ⊈ ⊉ ∩ ∪</td></tr>
     <tr><td>= ≠ ≡ ≢ ∼ ≁ ≅ ≇ ≈ ≉ &lt; &gt; ≮ ≯ ≤ ≥ ≰ ≱ ≪ ≫</td></tr>
+    <tr><td>⇐ ⇔ ⇒</td></tr>
+    <tr><td>ℂ ℍ ℕ ℙ ℚ ℝ ℤ ℾ ℿ</td></tr>
 </table>
 </body>
 </html>
