--- a/symbol/symbol.html
+++ b/symbol/symbol.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" manifest="symbol.appcache">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-<link rel="icon" type="image/png" href="favicon.png" sizes="1024x1024">
+<link rel="shortcut icon" type="image/png" href="favicon.png" sizes="1024x1024">
 <head>
 <style>
 @font-face{
