font-family directive

--- a/symbol/symbol.html
+++ b/symbol/symbol.html
@@ -11,7 +11,7 @@
 }
 body{
 	background-color:#FFC;
-	font-family:'Cambria Math',Calibri,'Arial Unicode MS',Arial,Helvetica,sans-serif;
+	font-family:'Quivira','Cambria Math',Calibri,'Arial Unicode MS',Arial,Helvetica,sans-serif;
 	-ms-touch-action:none;
 	touch-action:none;
 }
