--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>You are probably looking for my personal website: <a href="https://bernardteo.me/">bernardteo.me</a></p>
 <script type="text/javascript" src="google-analytics.js"></script>
 </body>
 </html>
