--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>You are probably looking for my personal website: <a href="https://bernardteo.me/">bernardteo.me</a></p>
+<p>My personal website: <a href="https://bernardteo.me/">bernardteo.me</a></p>
+<p>Some old stuff that may or may not work:</p>
+<ul>
+<li><a href="compass-2">My compass and straightedge game</a></li>
+<li><a href="minesweeper">My minesweeper game</a></li>
+<li><a href="sudoku">My Sudoku solver</a></li>
+<li><a href="symbol">Some mathematical symbols (for copying and pasting)</a></li>
+</ul>
 <script type="text/javascript" src="google-analytics.js"></script>
 </body>
 </html>
